# bspline_interpolation_c

./: LICENSE  README.md  README.txt
data/: lenna.pgm  lenna_x+0.5.pfm
src/: CMakeLists.txt  Doxyfile  bspline.c  bspline.h  bspline_main.c  compute_bspline.c  hom4p.c  homography_tools.c  homography_tools.h  splinter.c  splinter.h  splinter_transform.c  splinter_transform.h  xmtime.h
src/CMake/: FindGSL.cmake
src/iio/: CMakeLists.txt  Makefile  iio.c  iioConfig.cmake  iio_test.c  iio_test_named.c
